write tab tweak: have the Textile help use lists and paragraphs (fix a spacing problem).
git-svn-id: http://textpattern.googlecode.com/svn/development/4.0@1416 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/textpattern.css
+++ b/textpattern/textpattern.css
@@ -322,13 +322,19 @@ padding: 10px;
 background-color: #ffc;
 }
 
+ul.textile-help, 
 ul.tag-links {
-font-size: 0.9em;
 list-style-type: none;
 }
 
+ul.textile-help li, 
 ul.tag-links li {
 margin: 0 0 2px 0;
+}
+
+.textile-help, 
+ul.tag-links {
+font-size: 0.9em;
 }
 
 #warning {
